--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lgtv",
+  "name": "LG-tv-http-server",
   "version": "0.2.4",
   "description": "Simple lib to interact with and control an LG WebOS smart TV.",
   "main": "index.js",
