--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "lgtv": "^0.2.4",
+    "node-wol": "^0.1.1",
     "request": "^2.79.0",
     "websocket": "^1.0.17"
   }
